--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@
   padding: 0;
   border-radius: 0 0 0 0;
   margin-bottom: 0px;
-  background-image: url("../ICCRDA-2024/gallery/uni.jpg");
+  background-image: url("/gallery/uni.jpg");
   background-position: center;
   background-size: cover;
   color: white;
