--- a/css/steering_cummity_style.css
+++ b/css/steering_cummity_style.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Merriweather:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
+@media only screen and (max-width: 1100px){
+    .rows{
+        flex-wrap: wrap;
+    }
+}
 .m-auto{
     margin: auto;
 }
