--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,10 @@
   border: 1px solid;
 }
 
+.canvas {
+  padding-left: 40px;
+  padding-top: 60px;
+}
 .top_image {
   /* position: relative; */
   width: 130px;
